# verus-geometry

./: Cargo.toml  README.md  docs.md
.github/workflows/: check.yml
docs/: TODO.md  convexity-redesign.md  runtime-optimization.md  star-counterexample.html
scripts/: check.sh  profile-modules.sh
src/: aabb.rs  area.rs  barycentric.rs  circle2.rs  circle_circle.rs  circle_circle_proofs.rs  circle_line.rs  circle_line_on_circle.rs  closest_point.rs  collinearity.rs  constructed_scalar.rs  convex_hull_3d.rs  convex_polygon.rs  convexity.rs  delaunay.rs  face_normal.rs  incircle.rs  insphere.rs  intersection3d.rs  lib.rs  line2.rs  line_intersection.rs  orient2d.rs  orient3d.rs  orientation_sign.rs  point2.rs  point3.rs  ray.rs  ray_triangle.rs  reflection.rs  segment_distance.rs  segment_intersection.rs  segment_polygon.rs  sidedness.rs  triangle_distance.rs  triangle_intersection.rs  voronoi.rs  winding.rs
src/runtime/: aabb.rs  area.rs  circle2.rs  circle_circle.rs  circle_line.rs  classification.rs  closest_point.rs  intersection3d.rs  line2.rs  line_intersection.rs  mod.rs  orient.rs  point2.rs  point3.rs  polygon.rs  ray.rs  ray_triangle.rs  segment.rs  segment_distance.rs  segment_polygon.rs  triangle_distance.rs  triangle_intersection.rs  voronoi.rs  winding.rs
